--- a/css/student2.css
+++ b/css/student2.css
@@ -1,1 +1,23 @@
+.gallery {
+    display: grid;
+    grid-template-columns: 250px 250px 250px;
+    border: dashed black 2px;
+    width: 90%;
+    grid-gap: 20px;
+    justify-content: center;
+    align-items: stretch;
+}
 
+.gallery img {
+    width: 250px;
+    height: 100%;
+    object-fit: cover;
+    border: solid black 2px;
+    border-radius: 25px;
+    padding: 10px;
+    margin: 0;
+}
+
+img:last-of-type {
+    grid-column: -1/1;
+}
